--- a/index.html
+++ b/index.html
@@ -5,8 +5,105 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Pttery barn</title>
+    <link rel="stylesheet" href="/styles/navbar.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Abril+Fatface&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <h1>Pottery Barn landing page</h1>
+        <ul class="nav-secondary nostyle">
+          <li>New & Now</li>
+          <li>In-Stock</li>
+          <li>Bestsellers</li>
+          <li>Collaborations</li>
+          <li>Design Services</li>
+          <li>Sustainability</li>
+        </ul>
+        <hr />
+      </div>
+    </nav>
+
+    <footer>
+      <div id="footer-section">
+        <div class="column">
+          <ul>
+            <h3>CUSTOMER SERVICE</h3>
+            <li>Contact Us</li>
+            <li>Email Preferences</li>
+            <li>Track your order</li>
+            <li>Return & Exchanges</li>
+            <li>Help Topics</li>
+            <li>Shopping Information</li>
+            <li>Give Us Feedback</li>
+            <li>International Orders</li>
+          </ul>
+        </div>
+        <div class="column">
+          <ul>
+            <h3>ABOUT Us</h3>
+            <li>Our Story</li>
+            <li>Careers</li>
+            <li>Press</li>
+            <li>Influencers</li>
+            <li>Find a Store</li>
+          </ul>
+          <ul>
+            <h3>B2B PROGRAMS</h3>
+            <li>Overview</li>
+            <li>Contract</li>
+            <li>Trade</li>
+            <li>Corporate</li>
+          </ul>
+        </div>
+        <div class="column">
+          <ul>
+            <h3>DSIGN SERVICES</h3>
+            <li>Free Interior Design</li>
+            <li>Installation Services</li>
+            <li>Start a Design Chat</li>
+          </ul>
+          <ul>
+            <h3>RESOURCES</h3>
+            <li>Pottery Barn Credit Card</li>
+            <li>Request a Catalog</li>
+            <li>Pay Bill Online</li>
+            <li>Address Change</li>
+            <li>Gift Cards</li>
+            <li>View Online Catalog</li>
+          </ul>
+        </div>
+        <div class="column">
+          <ul>
+            <li>Accessibility</li>
+            <li>Privacy</li>
+            <li>Terms</li>
+          </ul>
+          <ul>
+            <p>Join our VIP list for inspiration, new arrivals & more.</p>
+            <div id="footer-email-sign-up">
+              <input type="email" />
+              <button>SIGNUP</button>
+            </div>
+            <p>FOLLOW US</p>
+            <ul>
+              <li>insta</li>
+              <li>facebook</li>
+              <li>pinterest</li>
+              <li>youtube</li>
+              <li>twitter</li>
+            </ul>
+          </ul>
+        </div>
+      </div>
+      <p>
+        © 2022 Williams-Sonoma, Inc. All Rights Reserved | Terms & Conditions
+        (Updated April 2020) | Accessibility | Privacy Policy (Updated January
+        2022) | Legal Statement
+      </p>
+    </footer>
   </body>
 </html>
