index html push

--- a/index.html
+++ b/index.html
@@ -14,7 +14,65 @@
     />
   </head>
   <body>
-    <h1>Pottery Barn landing page</h1>
+    <nav>
+      <div id="cross_brand" class="pb-family">
+        <ul class="pb-family-left pb-family nostyle">
+          <li>PB Contract</li>
+          <li>PB/Apartment</li>
+          <li>Pottery Barn Teen</li>
+          <li>Williams Sonoma</li>
+          <li>WS Home</li>
+          <li>West Elm</li>
+          <li>Rejuvenation</li>
+          <li>Mark & Graham</li>
+        </ul>
+
+        <ul class="pb-family-right pb-family nostyle">
+          <li>
+            <div>My Store</div>
+            <div></div>
+          </li>
+          <li>
+            <div>Key Rewards</div>
+            <div></div>
+          </li>
+          <li>
+            <div>Track Order</div>
+            <div></div>
+          </li>
+          <li>
+            <div>Ship To</div>
+            <div></div>
+          </li>
+        </ul>
+      </div>
+      <div id="header-main-container">
+        <div id="search-logo-cart">
+          <div id="search-field">
+            <input type="text" />
+          </div>
+          <div id="icon-pb">POTTERYBARN</div>
+              d: path("M 5 12.1 v 10.6 h 1 v 0.5 H 0 v -0.5 h 1 V 0.5 H 0 V 0 h 7.1 c 0.5 0 2.3 -0.1 3.3 0.5 c 1.1 0.7 1.4 1.7 1.4 2.8 v 5.5 c 0 0.6 -0.1 1.6 -1.2 2.4 c -1 0.7 -2.8 0.8 -4.2 0.8 H 5 Z M 7.8 2.1 c 0 -0.4 0 -0.8 -0.2 -1.1 C 7.2 0.6 6.8 0.5 6.2 0.5 H 5 v 11.1 h 1.5 c 0.5 0 0.8 -0.2 1.1 -0.4 c 0.3 -0.3 0.2 -0.9 0.2 -1.2 V 2.1 Z");
+}
+          <div class="user-links">
+            <div class="separated-list">
+              <div></div>
+              <div>My Account</div>
+            </div>
+            <div class="separated-list">
+              <div></div>
+              <div>Wedding Registry</div>
+            </div>
+            <div class="separated-list">
+              <div></div>
+              <div>Favorites</div>
+            </div>
+            <div class="separated-list">
+              <div></div>
+              <div>Cart</div>
+            </div>
+          </div>
+        </div>
         <ul class="nav-secondary nostyle">
           <li>New & Now</li>
           <li>In-Stock</li>
