footer complete done , almost header done

--- a/index.html
+++ b/index.html
@@ -5,18 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Pttery barn</title>
-    <link rel="stylesheet" href="/styles/navbar.css" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Abril+Fatface&display=swap"
-      rel="stylesheet"
-    />
+    <link rel="stylesheet" href="/styles/header.css" />
+    <link rel="stylesheet" href="/styles/footer.css" />
   </head>
   <body>
     <nav>
       <div id="cross_brand" class="pb-family">
-        <ul class="pb-family-left pb-family nostyle">
+        <ul class="pb-family-left pb-family">
           <li>PB Contract</li>
           <li>PB/Apartment</li>
           <li>Pottery Barn Teen</li>
@@ -27,7 +22,7 @@
           <li>Mark & Graham</li>
         </ul>
 
-        <ul class="pb-family-right pb-family nostyle">
+        <ul class="pb-family-right pb-family">
           <li>
             <div>My Store</div>
             <div></div>
@@ -52,116 +47,285 @@
             <input type="text" />
           </div>
           <div id="icon-pb">POTTERYBARN</div>
-              d: path("M 5 12.1 v 10.6 h 1 v 0.5 H 0 v -0.5 h 1 V 0.5 H 0 V 0 h 7.1 c 0.5 0 2.3 -0.1 3.3 0.5 c 1.1 0.7 1.4 1.7 1.4 2.8 v 5.5 c 0 0.6 -0.1 1.6 -1.2 2.4 c -1 0.7 -2.8 0.8 -4.2 0.8 H 5 Z M 7.8 2.1 c 0 -0.4 0 -0.8 -0.2 -1.1 C 7.2 0.6 6.8 0.5 6.2 0.5 H 5 v 11.1 h 1.5 c 0.5 0 0.8 -0.2 1.1 -0.4 c 0.3 -0.3 0.2 -0.9 0.2 -1.2 V 2.1 Z");
-}
           <div class="user-links">
             <div class="separated-list">
               <div></div>
-              <div>My Account</div>
+              <div class="hp-link">My Account</div>
             </div>
             <div class="separated-list">
               <div></div>
-              <div>Wedding Registry</div>
+              <div class="hp-link">Wedding Registry</div>
             </div>
             <div class="separated-list">
               <div></div>
-              <div>Favorites</div>
+              <div class="hp-link">Favorites</div>
             </div>
             <div class="separated-list">
               <div></div>
-              <div>Cart</div>
+              <div class="hp-link">Cart</div>
             </div>
           </div>
         </div>
-        <ul class="nav-secondary nostyle">
-          <li>New & Now</li>
-          <li>In-Stock</li>
-          <li>Bestsellers</li>
-          <li>Collaborations</li>
-          <li>Design Services</li>
-          <li>Sustainability</li>
+        <ul class="nav-secondary">
+          <li class="nav-extended-link hp-link">
+            New & Now
+
+            <!-- new and now dropdown starts here -->
+            <div class="dropdown">
+              <div class="nav-link-extended">
+                <ul>
+                  <img
+                    src="https://assets.pbimgs.com/pbimgs/rk/images/dp/ecm/202152/1648/001/003.jpg"
+                    alt=""
+                  />
+                  <p>The Spring Lookbook ></p>
+                </ul>
+                <ul>
+                  <img
+                    src="https://assets.pbimgs.com/pbimgs/rk/images/dp/ecm/202152/1648/001/002.jpg"
+                    alt=""
+                  />
+                  <p>New Arrivals ></p>
+                </ul>
+                <ul>
+                  <img
+                    src="https://assets.pbimgs.com/pbimgs/rk/images/dp/ecm/202152/1648/001/001.jpg"
+                    alt=""
+                  />
+                  <p>Our Favorite Bedding Looks ></p>
+                </ul>
+
+                <ul>
+                  <p>New Arrivals</p>
+                  <li>Shop All</li>
+                  <li>Furniture</li>
+                  <li>Outdoor & Garden</li>
+                  <li>Bedding</li>
+                  <li>Bath</li>
+                  <li>Lighting</li>
+                  <li>Rugs</li>
+                  <li>Windows</li>
+                  <li>Pillows & Decor</li>
+                  <li>Mirrors & Art</li>
+                  <li>Tabletop & Bar</li>
+                  <li>Storage</li>
+                </ul>
+
+                <ul>
+                  <p>Trending Now</p>
+                  <li>Misty Morning Palette</li>
+                  <li>Textured Solids</li>
+                  <li>Recycled & Colored Glass</li>
+                  <li>Woven Textures & Rattan</li>
+                  <li>Artisanal Ceramics</li>
+                  <li>Statement Branches</li>
+                  <li>Stylish Storage</li>
+                  <li>Round Shapes</li>
+                  <li>Layers of Linen</li>
+
+                  <p>Get the look</p>
+
+                  <li>Pillow Pairings</li>
+                  <li>Bedding Looks</li>
+                  <li>Table Settings</li>
+                </ul>
+
+                <ul>
+                  <li>Room Inspiration</li>
+                  <li>Living Rooms</li>
+                  <li>Bedrooms</li>
+                  <li>Dining Rooms</li>
+                  <li>Home Offices</li>
+                  <li>Bathrooms</li>
+                  <li>Entryways</li>
+                  <li>Kitchens</li>
+                  <li>Small Spaces</li>
+                  <li>Outdoor</li>
+                  <li>Shop All</li>
+
+                  <p>The Instagram Shop</p>
+                  <li>Shop Now</li>
+                </ul>
+                <div></div>
+              </div>
+            </div>
+
+            <!-- new and now dropdown ends here -->
+          </li>
+
+          <li class="nav-extended-link hp-link">In-Stock</li>
+          <li class="nav-extended-link hp-link">Bestsellers</li>
+          <li class="nav-extended-link hp-link">
+            Collaborations
+
+            <!-- collaborations dropdown starts here  -->
+
+            <div class="dropdown">
+              <div class="nav-link-extended">
+                <ul>
+                  <img
+                    src="https://assets.pbimgs.com/pbimgs/rk/images/dp/ecm/202152/1648/001/003.jpg"
+                    alt=""
+                  />
+                  <p class="hp-link">The Spring Lookbook ></p>
+                </ul>
+                <ul>
+                  <img
+                    src="https://assets.pbimgs.com/pbimgs/rk/images/dp/ecm/202152/1194/001/001.jpg"
+                    alt=""
+                  />
+                  <p>New Arrivals ></p>
+                </ul>
+                <ul>
+                  <img
+                    src="https://assets.pbimgs.com/pbimgs/rk/images/dp/ecm/202208/1172/001/001.jpg"
+                    alt=""
+                  />
+                  <p>Our Favorite Bedding Looks ></p>
+                </ul>
+
+                <ul>
+                  <p>Collaborations</p>
+                  <li>Black Artists + Designers Guild</li>
+                  <li>Monique Lhuillier</li>
+                  <li>Peter Rabbit™</li>
+                  <li>Peanuts®</li>
+                  <li>Disney Mickey Mouse</li>
+                  <li>Airstream</li>
+                  <li>Rebecca Atwood</li>
+                  <li>Sherwin-Williams</li>
+                </ul>
+
+                <ul>
+                  <p>Partners For Progress</p>
+                  <li>Arbor Day Foundation</li>
+                  <li>The Trevor Project</li>
+                  <li>NAACP</li>
+                  <li>St. Jude</li>
+                </ul>
+                <div></div>
+              </div>
+            </div>
+
+            <!-- collaborations ends here  -->
+          </li>
+          <li class="nav-extended-link hp-link">
+            Design Services
+
+            <!-- Design Services dropdown starts here  -->
+
+            <div class="dropdown">
+              <div class="nav-link-extended">
+                <ul>
+                  <img
+                    src="https://assets.pbimgs.com/pbimgs/rk/images/dp/ecm/202152/4581/001/001.jpg"
+                    alt=""
+                  />
+                  <p>The Spring Lookbook ></p>
+                </ul>
+                <ul>
+                  <img
+                    src="https://assets.pbimgs.com/pbimgs/rk/images/dp/ecm/202152/4581/001/003.jpg"
+                    alt=""
+                  />
+                  <p>New Arrivals ></p>
+                </ul>
+                <ul>
+                  <img
+                    src="https://assets.pbimgs.com/pbimgs/rk/images/dp/ecm/202152/4581/001/002.jpg"
+                    alt=""
+                  />
+                  <p>Our Favorite Bedding Looks ></p>
+                </ul>
+
+                <ul>
+                  <p>Design Services</p>
+                  <li>Free Interior Design</li>
+                  <li>Installation Services</li>
+                  <li>Room Planner</li>
+                  <li>Start a Design Chat</li>
+                  <p>Featured Projects</p>
+                  <li>Allison Holker-Boss</li>
+                  <li>Nastia Luikin</li>
+                </ul>
+
+                <ul>
+                  <p>Design Resources</p>
+                  <li>Free Fabric Swatches</li>
+                  <li>Find the Right Size Rug</li>
+                  <li>How to Hang Artwork</li>
+                  <li>Designing a Gallery Wall</li>
+                  <li>The Lighting Guide</li>
+                  <li>Dining Table Buying Guide</li>
+                  <li>How to Style Your Windows</li>
+                  <li>The Upholstery Fabric Guide</li>
+                  <li>How to Choose Paint Colors</li>
+                </ul>
+
+                <ul>
+                  <p>B2B Programs</p>
+                  <li>Overview</li>
+                  <li>Trade</li>
+                  <li>Contract</li>
+                  <li>Corporate Gifting</li>
+                </ul>
+                <div></div>
+              </div>
+            </div>
+
+            <!-- Design Services dropdown ends here  -->
+          </li>
+          <li class="nav-extended-link hp-link">
+            Sustainability
+
+            <!-- sustainibility dropdown starts here -->
+
+            <div class="dropdown">
+              <div class="nav-link-extended" id="sustainibility">
+                <ul>
+                  <img
+                    src="https://assets.pbimgs.com/pbimgs/rk/images/dp/ecm/202141/1804/037/331.jpg"
+                    alt=""
+                  />
+                  <p>The Spring Lookbook ></p>
+                </ul>
+                <ul>
+                  <img
+                    src="https://assets.pbimgs.com/pbimgs/rk/images/dp/ecm/202206/1062/001/001.jpg"
+                    alt=""
+                  />
+                  <p>New Arrivals ></p>
+                </ul>
+                <ul>
+                  <img
+                    src="https://assets.pbimgs.com/pbimgs/rk/images/dp/ecm/202141/1804/028/318.jpg"
+                    alt=""
+                  />
+                  <p>Our Favorite Bedding Looks ></p>
+                </ul>
+                <ul>
+                  <p>Our Impact</p>
+                  <li>See Our Commitments</li>
+                  <li>3 Million Trees Initiative</li>
+                  <p>Shop Sustainably</p>
+                  <li>Organic</li>
+                  <li>Sustainably Sourced</li>
+                  <li>Fair Trade Certified</li>
+                  <li>Handcrafted</li>
+                  <li>Certified Nontoxic</li>
+                  <li>Shop All</li>
+                </ul>
+                <div></div>
+              </div>
+            </div>
+            <!-- sustanibility dropdown ends here -->
+          </li>
         </ul>
-        <hr />
       </div>
     </nav>
-
-    <footer>
-      <div id="footer-section">
-        <div class="column">
-          <ul>
-            <h3>CUSTOMER SERVICE</h3>
-            <li>Contact Us</li>
-            <li>Email Preferences</li>
-            <li>Track your order</li>
-            <li>Return & Exchanges</li>
-            <li>Help Topics</li>
-            <li>Shopping Information</li>
-            <li>Give Us Feedback</li>
-            <li>International Orders</li>
-          </ul>
-        </div>
-        <div class="column">
-          <ul>
-            <h3>ABOUT Us</h3>
-            <li>Our Story</li>
-            <li>Careers</li>
-            <li>Press</li>
-            <li>Influencers</li>
-            <li>Find a Store</li>
-          </ul>
-          <ul>
-            <h3>B2B PROGRAMS</h3>
-            <li>Overview</li>
-            <li>Contract</li>
-            <li>Trade</li>
-            <li>Corporate</li>
-          </ul>
-        </div>
-        <div class="column">
-          <ul>
-            <h3>DSIGN SERVICES</h3>
-            <li>Free Interior Design</li>
-            <li>Installation Services</li>
-            <li>Start a Design Chat</li>
-          </ul>
-          <ul>
-            <h3>RESOURCES</h3>
-            <li>Pottery Barn Credit Card</li>
-            <li>Request a Catalog</li>
-            <li>Pay Bill Online</li>
-            <li>Address Change</li>
-            <li>Gift Cards</li>
-            <li>View Online Catalog</li>
-          </ul>
-        </div>
-        <div class="column">
-          <ul>
-            <li>Accessibility</li>
-            <li>Privacy</li>
-            <li>Terms</li>
-          </ul>
-          <ul>
-            <p>Join our VIP list for inspiration, new arrivals & more.</p>
-            <div id="footer-email-sign-up">
-              <input type="email" />
-              <button>SIGNUP</button>
-            </div>
-            <p>FOLLOW US</p>
-            <ul>
-              <li>insta</li>
-              <li>facebook</li>
-              <li>pinterest</li>
-              <li>youtube</li>
-              <li>twitter</li>
-            </ul>
-          </ul>
-        </div>
-      </div>
-      <p>
-        © 2022 Williams-Sonoma, Inc. All Rights Reserved | Terms & Conditions
-        (Updated April 2020) | Accessibility | Privacy Policy (Updated January
-        2022) | Legal Statement
-      </p>
-    </footer>
+    <div id="hp-hr-line"></div>
+    <footer id="ft-container"></footer>
   </body>
 </html>
+
+<script type="module" src="/scripts/index.js"></script>
