created outdoor page

--- a/furniture.html
+++ b/furniture.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="furniture.css">
 </head>
 <body>
     <div id="container">
@@ -18,21 +18,20 @@
                 SHOP NOW ></div>
         </div>
         <!-----------------end-------------------->
-        <div id="breadcrumbs" class="block">
+        <div id="breadcrumbs">
             <ul>
-                <li><a href="http://"></a></li>
-                <li><h1 style="padding: 10px 20px; margin: 0px 50px 0px 84px;">Furniture</h1></li>
+                <li id="page-header"><h1 style=" font-weight: lighter;">Furniture</h1></li>
             </ul>
             <img src="https://assets.pbimgs.com/pbimgs/ab/images/dp/ecm/202152/6400/001/001.jpg" alt="">
         </div>
            <!-----------------end-------------------->
-        <div id="main" class="block">
+        <div id="main">
             <div id="sidebar">
-                <div id="left-nav-link">
-                    <div id="nav-heading">
-                        <span class="header">Living Room Furniture</span>
+                <div class="left">
+                    <div class="nav-head">
+                        <span class="left-nav-heading">Living Room Furniture</span>
                     </div>
-                    <ul id="ul">
+                    <ul class="left-ul-nav">
                         <li class="nav-link">Sofa & Sectional Collections</li>
                         <li class="nav-link">Sectionals</li>
                         <li class="nav-link">Sofas & Loveseats</li>
@@ -48,11 +47,11 @@
                         <li class="nav-link">All Living Room Furniture</li>
                     </ul>
                 </div>
-                <div id="left-nav-link">
-                    <div id="nav-heading">
-                        <span class="header">Bedroom Furniture</span>
+                <div class="left-nav-link">
+                    <div class="nav-head">
+                        <span class="left-nav-heading">Bedroom Furniture</span>
                     </div>
-                    <ul id="ul">
+                    <ul class="left-ul-nav">
                         <li class="nav-link">Bedroom Collections</li>
                         <li class="nav-link">Beds & Headboards</li>
                         <li class="nav-link">Dressers & Armoires</li>
@@ -62,11 +61,11 @@
                         <li class="nav-link">All Bedroom Furniture</li>
                     </ul>
                 </div>
-                <div id="left-nav-link">
-                    <div id="nav-heading">
-                        <span class="header">Home Office Furniture</span>
+                <div class="left-nav-link">
+                    <div class="nav-head">
+                        <span class="left-nav-heading">Home Office Furniture</span>
                     </div>
-                    <ul id="ul">
+                    <ul class="left-ul-nav">
                         <li class="nav-link">Home Office Collections</li>
                         <li class="nav-link">Desks</li>
                         <li class="nav-link">Desk Chairs</li>
@@ -75,72 +74,72 @@
                         <li class="nav-link">All Home Office Furniture</li>
                     </ul>
                 </div>
-                <div id="left-nav-link">
-                    <div id="nav-heading">
-                        <span class="header">Storage Furniture</span>
+                <div class="left-nav-link">
+                    <div class="nav-head">
+                        <span class="left-nav-heading">Storage Furniture</span>
                     </div>
-                    <ul id="ul">
+                    <ul class="left-ul-nav">
                         <li class="nav-link">Bookcases & Shelves</li>
                         <li class="nav-link">Cabinets & Armoires</li>
                         <li class="nav-link">All Cabinets & Shelving</li>
                     </ul>
                 </div>
-                <div id="left-nav-link">
-                    <div id="nav-heading">
-                        <span class="header">Entry & Mudroom</span>
+                <div class="left-nav-link">
+                    <div class="nav-head">
+                        <span class="left-nav-heading">Entry & Mudroom</span>
                     </div>
-                    <ul id="ul">
+                    <ul class="left-ul-nav">
                         <li class="nav-link">All Entryway</li>
                     </ul>
                 </div>
-                <div id="left-nav-link">
-                    <div id="nav-heading">
-                        <span class="header">Small-Space Furniture</span>
+                <div class="left-nav-link">
+                    <div class="nav-head">
+                        <span class="left-nav-heading">Small-Space Furniture</span>
                     </div>
-                    <ul id="ul">
+                    <ul class="left-ul-nav">
                         <li class="nav-link">Small-Space Furniture</li>
                     </ul>
                 </div>
-                <div id="left-nav-link">
-                    <div id="nav-heading">
-                        <span class="header">More Rooms</span>
+                <div class="left-nav-link">
+                    <div class="nav-head">
+                        <span class="left-nav-heading">More Rooms</span>
                     </div>
-                    <ul id="ul">
+                    <ul class="left-ul-nav">
                         <li class="nav-link">Home Gym</li>
                         <li class="nav-link">Game Room</li>
                         <li class="nav-link">Bathroom Furniture</li>
                     </ul>
                 </div>
-                <div id="left-nav-link">
-                    <div id="nav-heading">
-                        <span class="header">Sale & Clearance</span>
+                <div class="left-nav-link">
+                    <div class="nav-head">
+                        <span class="left-nav-heading">Sale & Clearance</span>
                     </div>
-                    <ul id="ul">
+                    <ul class="left-ul-nav">
                         <li class="nav-link">Up To 60% Off Furniture</li>
                     </ul>
                 </div>
-                <div id="left-nav-link">
-                    <div id="nav-heading">
-                        <span class="header">In-Stock Furniture</span>
+                <div class="left-nav-link">
+                    <div class="nav-head">
+                        <span class="left-nav-heading">In-Stock Furniture</span>
                     </div>
-                    <ul id="ul">
+                    <ul class="left-ul-nav">
                         <li class="nav-link">In-Stock Furniture</li>
                         <li class="nav-link">All In-Stock Furniture</li>
                     </ul>
                 </div>
-                <div id="left-nav-link">
-                    <div id="nav-heading">
-                        <span class="header">New & Now</span>
+                <div class="left-nav-link">
+                    <div class="nav-head">
+                        <span class="left-nav-heading">New & Now</span>
                     </div>
-                    <ul id="ul">
+                    <ul class="left-ul-nav">
                         <li class="nav-link">New Arrivalse</li>
                     </ul>
                 </div>
-                <div id="left-nav-link">
-                    <div id="nav-heading">
-                        <span class="header">Design Resources</span>
+                <div class="left-nav-link">
+                    <div class="nav-head">
+                        <span class="left-nav-heading">Design Resources</span>
                     </div>
-                    <ul id="ul">
+                    <ul class="left-ul-nav">
                         <li class="nav-link">Dining Table Buying Guide</li>
                         <li class="nav-link">Contract Grade Furniture</li>
                         <li class="nav-link">Fabric & Leather Guide</li>
@@ -149,11 +148,11 @@
                         <li class="nav-link">Wood Swatches</li>
                     </ul>
                 </div>
-                <div id="left-nav-link">
-                    <div id="nav-heading">
-                        <span class="header">Shop Our Family Of Brands</span>
+                <div class="left-nav-link">
+                    <div class="nav-head">
+                        <span class="left-nav-heading">Shop Our Family Of Brands</span>
                     </div>
-                    <ul id="ul">
+                    <ul class="left-ul-nav">
                         <li class="nav-link">Shop Our Family Of Brands</li>
                         <li class="nav-link">Pottery Barn Kids Furniture</li>
                         <li class="nav-link">Pottery Barn Teen Furniture</li>
@@ -166,7 +165,7 @@
             </div>
             <div id="prod">
                 <div class="category-list">
-                    <h2 id="heading">LIVING ROOM FURNITURE</h2>
+                    <h2 class="right-heading">LIVING ROOM FURNITURE</h2>
                     <div class="container">
                         <div class="grid-item">
                             <img src="https://assets.pbimgs.com/pbimgs/ab/images/dp/wcm/202152/1193/img2m.jpg" alt="">
@@ -223,7 +222,7 @@
                     </div>
                 </div>
                 <div class="category-list">
-                    <h2 id="heading">BEDROOM FURNITURE</h2>
+                    <h2 class="right-heading">BEDROOM FURNITURE</h2>
                     <div class="container">
                         <div class="grid-item">
                             <img src="https://assets.pbimgs.com/pbimgs/ab/images/dp/wcm/202141/0253/img1m.jpg" alt="">
@@ -256,7 +255,7 @@
                     </div>
                 </div>
                 <div class="category-list">
-                    <h2 id="heading">DINING & KITCHEN FURNITURE</h2>
+                    <h2 class="right-heading">DINING & KITCHEN FURNITURE</h2>
                     <div class="container">
                         <div class="grid-item">
                             <img src="https://assets.pbimgs.com/pbimgs/ab/images/dp/wcm/202141/0257/img2m.jpg" alt="">
@@ -293,7 +292,7 @@
                     </div>
                 </div>
                 <div class="category-list">
-                    <h2 id="heading">HOME OFFICE FURNITURE</h2>
+                    <h2 class="right-heading">HOME OFFICE FURNITURE</h2>
                     <div class="container">
                         <div class="grid-item">
                             <img src="https://assets.pbimgs.com/pbimgs/ab/images/dp/wcm/202141/0262/img2m.jpg" alt="">
@@ -322,7 +321,7 @@
                     </div>
                 </div>
                 <div class="category-list">
-                    <h2 id="heading">STORAGE FURNITURE</h2>
+                    <h2 class="right-heading">STORAGE FURNITURE</h2>
                     <div class="container">
                         <div class="grid-item">
                             <img src="https://assets.pbimgs.com/pbimgs/ab/images/dp/wcm/202202/0519/img1m.jpg" alt="">
@@ -343,7 +342,7 @@
                     </div>
                 </div>
                 <div class="category-list">
-                    <h2 id="heading">SMALL-SPACE FURNITURE</h2>
+                    <h2 class="right-heading">SMALL-SPACE FURNITURE</h2>
                     <div class="container">
                         <div class="grid-item">
                             <img src="https://assets.pbimgs.com/pbimgs/ab/images/dp/wcm/202152/1245/img1m.jpg" alt="">
@@ -352,7 +351,7 @@
                     </div>
                 </div>
                 <div class="category-list">
-                    <h2 id="heading">MORE ROOMS</h2>
+                    <h2 class="right-heading">MORE ROOMS</h2>
                     <div class="container">
                         <div class="grid-item">
                             <img src="https://assets.pbimgs.com/pbimgs/ab/images/dp/wcm/202152/1301/img1m.jpg" alt="">
@@ -381,7 +380,7 @@
                     </div>
                 </div>
                 <div class="category-list">
-                    <h2 id="heading">IN-STOCK FURNITURE</h2>
+                    <h2 class="right-heading">IN-STOCK FURNITURE</h2>
                     <div class="container">
                         <div class="grid-item">
                             <img src="https://assets.pbimgs.com/pbimgs/rk/images/dp/wcm/202152/1193/img3m.jpg" alt="">
@@ -394,7 +393,7 @@
                     </div>
                 </div>
                 <div class="category-list">
-                    <h2 id="heading">NEW & NOW</h2>
+                    <h2 class="right-heading">NEW & NOW</h2>
                     <div class="container">
                         <div class="grid-item">
                             <img src="https://assets.pbimgs.com/pbimgs/rk/images/dp/wcm/202152/1248/img1m.jpg" alt="">
@@ -403,7 +402,7 @@
                     </div>
                 </div>
                 <div class="category-list">
-                    <h2 id="heading">DESIGN RESOURCES</h2>
+                    <h2 class="right-heading">DESIGN RESOURCES</h2>
                     <div class="container">
                         <div class="grid-item">
                             <img src="https://assets.pbimgs.com/pbimgs/rk/images/dp/wcm/202205/0021/img21m.jpg" alt="">
@@ -418,29 +417,29 @@
             </div>
         </div>
            <!-----------------end-------------------->
-        <div id="bottom" class="block">
+        <div id="bottom">
             <div class="carousal-conatiner1">
                 <div id="prod-carousal">
                     <div id="prod-title">
-                        <h2>TOP PICKS FOR YOU</h2>
+                        <h2 style="font-size:18px;">TOP PICKS FOR YOU</h2>
                     </div>
                     <div id="prod-cell">
-                        <div id="product">
+                        <div class="product">
                             <img src="https://assets.pbimgs.com/pbimgs/rk/images/dp/wcm/202134/0610/toscana-extending-dining-table-1-c.jpg" alt="">
                             <span class="margin">Toscana Extending Dining Table</span>
                             <h4 class="margin">$1,799 – $2,199</h4>
                         </div>
-                        <div id="product">
+                        <div class="product">
                             <img src="https://assets.pbimgs.com/pbimgs/rk/images/dp/wcm/202136/0470/sausalito-8-drawer-wide-dresser-c.jpg" alt="">
                             <span class="margin">Sausalito 8-Drawer Wide Dresser</span>
                             <h4 class="margin">$1,999</h4>
                         </div>
-                        <div id="product">
+                        <div class="product">
                             <img src="https://assets.pbimgs.com/pbimgs/rk/images/dp/wcm/202139/0002/farmhouse-bed-c.jpg" alt="">
                             <span class="margin">Farmhouse Bed</span>
                             <h4 class="margin">$1,599 – $1,799</h4>
                         </div>
-                        <div id="product">
+                        <div class="product">
                             <img src="https://assets.pbimgs.com/pbimgs/rk/images/dp/wcm/202133/0403/reed-extending-dining-table-c.jpg" alt="">
                             <span class="margin">  <br>Reed Extending Dining Table</span>
                             <h4 class="margin">$999 – $1,699</h4>
@@ -450,14 +449,14 @@
             </div>
             <div class="carousal-conatiner2">
                 <div class="head">
-                   <h1>SHARE, SHOP & GET INSPIRED</h1>
-                   <p style="margin-top: 30px;">Be the first to share how you've styled this item!</p>
-                   <p style="text-align:center;margin-top: 20px;">Upload your pictures here or on Instagram. Tag @potterybarn to get featured!</p>
+                   <h1 style="font-size:27px; font-weight:lighter;">SHARE, SHOP & GET INSPIRED</h1>
+                   <p style="margin: 0px 0px 10p 50pxx; padding: 0px 0px 5px 30px; font-size:16px;">Be the first to share how you've styled this item!</p>
+                   <p style="text-align:center;margin-top: 20px;font-size:16px;">Upload your pictures here or on Instagram. Tag @potterybarn to get featured!</p>
                 </div>
             </div>
             <div class="carousal-conatiner3">
                 <div id="related-heading">
-                    <h3 style="margin: 0px 0px 10px; padding: 0px 0px 5px;">RELATED <br> SEARCHES</h3>
+                    <p style="margin: 0px 0px 10px; padding: 0px 0px 5px;font-size:16px; font-weight:light;">RELATED SEARCHES</p>
                     <ul class="related-ul">
                         <li>round dining tables</li>
                         <li>benchwright dining tables</li>
@@ -467,10 +466,10 @@
                     </ul>
                 </div>
                 <div id="related-searches">
-                    <h3 style="margin: 0px 0px 10px; padding: 0px 0px 5px;">CREATE A NEW FEEL AT HOME WITH NEW FURNITURE</h3>
-                    <p style="margin: 0px 0px 10px;">No matter what room you're in, you want to feel like you're at home in your space. Each room should be a magnificent reflection of your personal taste and style. Discover the furniture that can take your room to a new level of beauty and craftsmanship.</p>
-                    <p style="margin: 0px 0px 10px;">Start with the living room and decorate for entertaining and relaxing. Then, create a home office that gives you space for your best work, even if it includes regular home tasks. In the dining room, a new table and chairs makes it an entirely new room. Work from one end of your house to the other for a steady transformation.</p>
-                    <p style="margin: 0px 0px 10px;">...</p>
+                    <h3 style="margin: 0px 0px 10px; padding: 0px 0px 5px;font-weight:lighter;">CREATE A NEW FEEL AT HOME WITH NEW FURNITURE</h3>
+                    <p style="margin: 0px 0px 10px;font-size: 13px;">No matter what room you're in, you want to feel like you're at home in your space. Each room should be a magnificent reflection of your personal taste and style. Discover the furniture that can take your room to a new level of beauty and craftsmanship.</p>
+                    <p style="margin: 0px 0px 10px;font-size: 13px;">Start with the living room and decorate for entertaining and relaxing. Then, create a home office that gives you space for your best work, even if it includes regular home tasks. In the dining room, a new table and chairs makes it an entirely new room. Work from one end of your house to the other for a steady transformation.</p>
+                    <p style="margin: 0px 0px 10px;font-size: 13px;">...</p>
                     <button style="margin: 0px; border: 0px; background-color: #ffffff;">Read More</button>
                 </div>
             </div>
