--- a/outdoor.html
+++ b/outdoor.html
@@ -484,7 +484,7 @@
                     <div id="prod-cell">
                         <div class="product">
                             <img src="https://assets.pbimgs.com/pbimgs/rk/images/dp/wcm/202204/0184/abbott-indoor-outdoor-96-concrete-fsc-acacia-chunky-leg-di-c.jpg" alt="">
-                            <span class="margin">Abbott Indoor/Outdoor 96" Concrete & FSC® Acacia Chunky Leg Dining Table</span>
+                            <span class="margin" style="margin-left: 30px;">Abbott Indoor/Outdoor 96" Concrete & FSC® Acacia Chunky Leg Dining Table</span>
                             <h4 class="margin">$2,699</h4>
                         </div>
                         <div class="product">
@@ -524,11 +524,11 @@
                     </ul>
                 </div>
                 <div id="related-searches">
-                    <h3 style="margin: 0px 0px 10px; padding: 0px 0px 5px;font-weight:lighter;">SHOP PATIO FURNITURE FOR POOL PARTIES, ENTERTAINING AND MORE</h3>
-                    <p style="margin: 0px 0px 10px;font-size: 13px;">Redefine the way you spend time outdoors with elegant, durable patio furniture from Pottery Barn. Whether you're soaking up the sun with fun-loving friends or just hanging out with your family for a weeknight dinner, having the right pieces of furniture makes the great outdoors more accessible.</p>
-                    <h3 style="margin: 0px 0px 10px; padding: 0px 0px 5px;font-weight:lighter;">WHY BUY PATIO FURNITURE? </h3>
-                    <p style="margin: 0px 0px 10px;font-size: 13px;">An empty backyard, patio or deck just doesn't look right. Fine patio furniture is more than just decoration when used correctly. Here are...</p>
-                    <button style="margin: 0px; border: 0px; background-color: #ffffff;">Read More</button>
+                    <h3 style="margin: 0px 0px 10px; padding: 0px 0px 5px;font-weight:lighter;letter-spacing: 0.5px;">SHOP PATIO FURNITURE FOR POOL PARTIES, ENTERTAINING AND MORE</h3>
+                    <p style="margin: 0px 0px 10px;font-size: 13px;letter-spacing: 0.5px;">Redefine the way you spend time outdoors with elegant, durable patio furniture from Pottery Barn. Whether you're soaking up the sun with fun-loving friends or just hanging out with your family for a weeknight dinner, having the right pieces of furniture makes the great outdoors more accessible.</p>
+                    <h4 style="margin: 0px 0px 10px; padding: 0px 0px 5px;font-weight:lighter;letter-spacing: 0.5px;">WHY BUY PATIO FURNITURE? </h4>
+                    <p style="margin: 0px 0px 10px;font-size: 13px;letter-spacing: 0.5px;">An empty backyard, patio or deck just doesn't look right. Fine patio furniture is more than just decoration when used correctly. Here are...</p>
+                    <button style="margin: 0px; border: 0px; background-color: #ffffff;letter-spacing: 0.5px;">Read More</button>
                 </div>
             </div>
         </div>
