--- a/sofa.html
+++ b/sofa.html
@@ -16,8 +16,8 @@
     </select>
     <select name="" id="brandFilter" onchange="filterCat()">
       <option value="">Select Brand</option>
-      <option value="Nike">Nike</option>
-      <option value="reebok">Reebok</option>
+      <option value="sofa">Sofa</option>
+      <option value="chair">Chair</option>
     </select>
     <div id="container">
       <!-- <div id="flex" >
